remove break-all to prevent line text truncation issue

--- a/grails-app/assets/stylesheets/default_template.css
+++ b/grails-app/assets/stylesheets/default_template.css
@@ -9,7 +9,7 @@ body {
 	padding-top: 0px;
 	padding-bottom: 30px;
 
-    word-break: break-all;
+    /* word-break: break-all; */
 }
 
 .social-toolbar a {
